--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
                 <img src="Imagenes/Titulo-la-gaviota.png">
             </div>
             <div class="container-header-text">
-                <h1>Avón</h1>
-                <p>8 de Octubre 2024</p>
+                <h1>Sra. Maia</h1>
+                <p>26 De Abril</p>
             </div>
         </header>
 
@@ -33,38 +33,31 @@
                 <li class="option">
                     <h2>Recepción</h2>
                     <ul>
-                        <li class="Nombre-plato">Variedad de empanadas</li>
-                        <li class="Variedad-plato">Carne</li>
-                        <li class="Variedad-plato">Capresse</li>
-                        <li class="Variedad-plato">Jamón y Queso</li>
-                        <li class="Variedad-plato">Humita</li>
-                    </ul>
-                </li>
-                <li class="option">
-                    <h2>Entrada</h2>
-                    <ul>
-                        <li class="Nombre-plato">Crepp de Verdura con salsa mixta</li>
-                    </ul>
-                </li>
-                <li class="option">
-                    <h2>Plato Principal</h2>
-                    <ul>
-                        <li class="Nombre-plato">Ragú de ternera con arroz primavera</li>
-                    </ul>
-                </li>
-                <li class="option">
-                    <h2 class="opcion-vegetariana" >Opcion Vegetariana</h2>
-                </li>
-                <li class="option">
-                    <h2>Entrada</h2>
-                    <ul>
-                        <li class="Nombre-plato">Pastel de choclo o tamalitos</li>
+                        <li class="Nombre-plato">Cazuelas con Albóndigas</li>
+                        <li class="Nombre-plato">Papas Rústicas</li>
+                        <li class="Variedad-plato">Salsa Criolla</li>
+                        <li class="Variedad-plato">Provenzal</li>
+                        <li class="Variedad-plato">Cheddar</li>
+                        <li class="Nombre-plato">Ensaladas</li>
+                        <li class="Variedad-plato">Rúcula y parmesano</li>
+                        <li class="Variedad-plato">Rúcula y cherry</li>
+                        <li class="Variedad-plato">Cesar</li>
+                        <li class="Nombre-plato">Pastel de Choclo</li>
+                        <li class="Nombre-plato">Fritura de Mariscos</li>
+                        <li class="Variedad-plato">Rabas, Langostinos, Cornalitos, Soufflé de pescados</li>
                     </ul>
                 </li>
                 <li class="option">
                     <h2>Plato Principal</h2>
                     <ul>
-                        <li class="Nombre-plato">Zukini relleno gratinado</li>
+                        <li class="Nombre-plato">Ternera al Malbec Acompañado con panes saborizados</li>
+                        <li class="Nombre-plato">Salsas</li>
+                        <li class="Variedad-plato">Ali Olí</li>
+                        <li class="Variedad-plato">Criolla</li>
+                        <li class="Variedad-plato">Mostaza y Miel</li>
+                        <li class="Variedad-plato">Mayonesa y aceitunas negras</li>
+                        <li class="Variedad-plato">Barbacoa</li>
+
                     </ul>
                 </li>
                 <li class="option">
@@ -73,41 +66,38 @@
                         <li class="Nombre-plato">Agua con gas y sin gas</li>
                         <li class="Nombre-plato">Gaseosa línea Coca Cola</li>
                         <li class="Nombre-plato">Limonada con Menta y Jengibre</li>
+                        <li class="Nombre-plato">Cerveza Stela Artois</li>
+                        <li class="Nombre-plato">Vino blanco y tinto</li>
                     </ul>
                 </li>
                 <li class="option">
-                    <h2>Postre</h2>
+                    <h2>Barra de Tragos</h2>
                     <ul>
-                        <li class="Nombre-plato">Crocante de chocolate con Helado de americana y salsa</li>
+                        <li class="Nombre-plato">Gin Tonic</li>
+                        <li class="Nombre-plato">Fernet</li>
+                        <li class="Nombre-plato">Aperol</li>
                     </ul>
                 </li>
                 <li class="option">
-                    <h2></h2>
+                    <h2>Cafetería</h2>
                     <ul>
-                        <li class="Nombre-plato">Cafeteria</li>
-                        <li class="Nombre-plato">Brindis con Champagne</li>
+                        <li class="Nombre-plato">Americano</li>
+                        <li class="Nombre-plato">Cortado</li>
                     </ul>
                 </li>
-
                 <li class="option">
                     <h2>Servicios</h2>
                     <ul>
-                        <li class="Nombre-plato">Armado de mesas con manteleria y vajilla completa</li>
-                        <li class="Nombre-plato">Mozos, Camareras, Servicio Gastronómico</li>
+                        <li class="Nombre-plato">Armado de salón con living</li>
+                        <li class="Nombre-plato">Mozos, Camareras, Barman, Servicio Gastronómico</li>
                         <li class="Nombre-plato">Estacionamiento privado y Seguridad</li>
-                    </ul>
-                </li>
-                <li class="option">
-                    <h2>No Incluye</h2>
-                    <ul>
-                        <li class="Nombre-plato">Sadai Adicapif</li>
                     </ul>
                 </li>
             </ul>
         </main>
-
+        
         <footer class="container-footer">
-            <h2>Valor por Persona 30.000 mas IVA</h2>
+            <h2>Valor por Persona 40.000</h2>
         </footer>
 
     <div>
