--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
                 <img src="Imagenes/Titulo-la-gaviota.png">
             </div>
             <div class="container-header-text">
-                <h1>Sra. Maia</h1>
-                <p>26 De Abril</p>
+                <h1>Yanina y Amilca</h1>
+                <p>22 De Abril</p>
             </div>
         </header>
 
